--- a/style.css
+++ b/style.css
@@ -56,3 +56,7 @@ svg.wc-message-callout {display:none;}
 	header {width:100%; position:absolute; z-index:1; top:0; left:0; right:0; bottom:0;}
 	#bot {width:100%}
 }
+
+.fb-login-button{
+	margin: 20px 0px;
+}
